[package]
name = "tmp36_sensor"
version = "0.0.2"
edition = "2021"
authors = ["Steve Briskin <steve@viam.com>"]
resolver = "2"
rust-version = "1.85"

[dependencies]
micro-rdk = { git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32", "binstart"], version = "0.5.0", rev = "v0.5.0" }

[package.metadata.com.viam]
module = true
